--- a/blog/index.textile
+++ b/blog/index.textile
@@ -3,11 +3,4 @@ layout: post
 title: Daniel Tull: Blog
 ---
 
-<ul class="archive">
-{% for post in site.posts %}
-<li>
-	<span class="date">{{ post.date | date: "%d %B %Y" }}</span>
-	<span class="title"><a href="{{ post.url }}">{{ post.title }}</a></span>
-</li>
-{% endfor %}
-</ul>
+test
